CortexGraphWriter hardcodes an error rate of 0.01, ensuring that a diff of a McCortex and CortexJDK graph on the same data returns no discrepancies.